  If pax detects a symbolic link loop, it now terminates for alignment with
  POSIX.1-2001.
* tr: The -C option from POSIX.1-2001 has been added.
* dd: With 'conv=unblock', the last block was not converted.
* csplit, ed, expr, grep, nl, pax, pg, sed: The POSIX versions no longer
  accept reverted ranges like '[b-a]' in regular expressions.

Release 050123
* tr: The highest acceptable wide character for complementing strings is now
  dynamically reset from 0x10FFFF to 0xFFFF if memory is sparse. The size of
  the corresponding hash table has been raised to reduce computing time.
* grep: With the -r option, directory loops caused by symbolic links are now
  detected and avoided. The -R option does no longer follow symbolic links
  that point to directories.
* pg: If the end of file was located immediately after the line displayed
  before the prompt, the same screen was displayed twice, once with the
  regular prompt and then with '(EOF):'. The end-of-file condition is now
  detected earlier, and the prompt is changed earlier accordingly.
* od: Fixed a one-byte heap overflow in the output buffering mechanism.
* more: If a 'n' command was given without a previous '/', a segmentation
  fault occured. The error condition is now properly recognized (Bugreport
  by Matthew Fischer).
* more: Fixed underlining of multibyte characters (Bugreport by Matthew
  Fischer).
* ps: -o etime sometimes printed output like '00:00:4294967295' with
  recently started processes (Bugreport by Matthew Fischer).
* pg: The fix for the '(EOF):' prompt in the last release caused the '.'
  command to advance a line if input came from a pipe but the current
  screen was the last one that had already been buffered.
* more: Do not rely on the state of continued calls to mbrtowc() but reset
  its state each time and call it with the complete sequence again to work
  around problems with glibc in EUC-JP locales (Patch by Matthew Fischer).